fixed (hopefully) image size problem on narrow devices

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ code {
 
 .center {
 	display: block;
-	min-width: 250pt;
+	min-width: 200pt;
 	width: 60%;
 	margin-left: auto;
 	margin-right: auto;
